More small cleanup